--- a/views/partials/deeper/image.handlebars
+++ b/views/partials/deeper/image.handlebars
@@ -1,1 +1,1 @@
-<img src="https://nodejs.org/static/images/logo-header.png" alt="NODEJS LOGO">
+<img src="https://nodejs.org/static/images/logo.svg" alt="NODEJS LOGO">
